--- a/React/src/layout/style/index.css
+++ b/React/src/layout/style/index.css
@@ -264,11 +264,16 @@ code {
 }
 
 .header .headerGrid {
+  width: 99%;
+  margin: auto;
   min-height: 55px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 23% 1fr 15%;
-      grid-template-columns: 23% 1fr 15%;
+  -ms-grid-columns: 20% 60% 15%;
+      grid-template-columns: 20% 60% 15%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
