--- a/React/src/layout/style/index.prefix.css
+++ b/React/src/layout/style/index.prefix.css
@@ -264,11 +264,16 @@ code {
 }
 
 .header .headerGrid {
+  width: 99%;
+  margin: auto;
   min-height: 55px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 23% 1fr 15%;
-      grid-template-columns: 23% 1fr 15%;
+  -ms-grid-columns: 20% 60% 15%;
+      grid-template-columns: 20% 60% 15%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -384,8 +389,8 @@ code {
   -ms-grid-column-align: start;
       justify-self: start;
   border: 2px solid black;
-  border-radius: 3px;
   max-width: 50px;
+  border-radius: 3px;
 }
 
 .header .headerGrid .search .realTimeResults li .realTimeCardGrid .realTimeCardTitle {
